fix: header no longer breaks format on phone.
UI styling no longer breaks on phone screen for
header section.

--- a/src/styles.css
+++ b/src/styles.css
@@ -399,4 +399,16 @@ footer>img {
     justify-content: center;
   }
 
+  header {
+    flex-direction: column;
+  }
+
+  .introduction {
+    text-align: center;
+  }
+
+  .about-links {
+    justify-content: center;
+  }
+
 }
